fixed timeline layout on smaller devices

--- a/resources/assets/styles/layouts/flexible-content/_timeline.scss
+++ b/resources/assets/styles/layouts/flexible-content/_timeline.scss
@@ -22,6 +22,23 @@
     left: 0;
   }
 
+  /* End Left card fix */
+
+  /* Fix the line for containers on the left side */
+  .left.card::before {
+    content: "";
+    position: absolute;
+    background-color: #007ac1;
+    width: 87px;
+    left: 477px;
+    top: 174px;
+    height: 7px;
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
+  }
+
   .right {
     left: 50%;
   }
@@ -33,12 +50,38 @@
 
   div.right:nth-child(odd) {
     left: 670px;
+
+    @include media-breakpoint-down(lg) {
+      left: 0;
+    }
   }
 
+  .right.card::before {
+    content: "";
+    position: absolute;
+    background-color: #007ac1;
+    width: 87px;
+    right: 477px;
+    top: 174px;
+    height: 7px;
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
+  }
+
+  /* End Right card fix */
+
   .card {
+    width: 30rem;
     background-color: #f5f5f5;
     border: 1px solid #f5f5f5;
     border-radius: 20px;
+
+    @include media-breakpoint-down(lg) {
+      width: 80%;
+      margin: auto;
+    }
 
     /* The circles on the timeline */
     &::after {
@@ -51,6 +94,10 @@
       top: 165px;
       border-radius: 50%;
       z-index: 1;
+
+      @include media-breakpoint-down(lg) {
+        display: none;
+      }
     }
 
     .title-wrapper {
